64bit address target

--- a/gmsrc/doc/ChangeLog.txt
+++ b/gmsrc/doc/ChangeLog.txt
@@ -362,3 +362,6 @@ o Fix GC auto calibration. Thanks DrEvil.
 27/05/10
 o Improved Minimal example.  Not all errors were logged. Also enabled debug mode. Thanks xaxa.
 
+09/07/10
+o Updated code base for 64bit address target. (64bit builds of current binaries not made or tested yet.) 
+o Updated system lib for 64bit Win OS compatibility.
