--- a/gmsrc/doc/ChangeLog.txt
+++ b/gmsrc/doc/ChangeLog.txt
@@ -394,3 +394,7 @@ o Fixed GC tricolor invariance wasn't preserved with local object transfer of ow
 
 7/10/11
 o Fixed GC (Another attempt)
+
+13/01/12
+o Improved syntactical sugar for functions. Thanks HenryTran.
+ 
