--- a/gmsrc/doc/ChangeLog.txt
+++ b/gmsrc/doc/ChangeLog.txt
@@ -398,3 +398,7 @@ o Fixed GC (Another attempt)
 13/01/12
 o Improved syntactical sugar for functions. Thanks HenryTran.
  
+10/02/12
+o Added experimental project gmddotnet (gmDebuggerNet) which is gmd ported to C# .Net from C++ MFC.
+  This was simply an experiment, this example debugger is as identically terrible as the original version.
+  
